# TEMPO

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
backend/: README.md  __init__.py  alembic.ini  app.py  index.py  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260406_000001_initial_schema.py
backend/api/: index.py
backend/app/: __init__.py  calculator.py  legal_rules.py  main.py  models.py
backend/app/api/: router.py
backend/app/api/routers/: attendance_requests.py  audit.py  auth.py  calculation.py  catalogs.py  company.py  employees.py  (+6 more)
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  bootstrap.py  models.py  session.py
backend/app/dependencies/: auth.py
backend/app/repositories/: attendance_request_repository.py  audit_repository.py  calculation_result_repository.py  company_repository.py  employee_policy_repository.py  employee_repository.py  payroll_connector_repository.py  time_entry_repository.py  user_repository.py  worksite_repository.py
backend/app/schemas/: attendance.py  audit.py  auth.py  catalog.py  common.py  company.py  employee.py  integration.py  report.py  time_entry.py  worksite.py
backend/app/scripts/: seed.py
backend/app/services/: attendance_service.py  audit_service.py  company_service.py  employee_service.py  import_service.py  report_service.py  time_entry_service.py
backend/tests/: test_api_productive.py  test_bootstrap.py  test_calculator.py  test_config.py
(+48 files in other folders)
